potential fix for bug 564898, crash in nsMsgAccountManager::RemoveFolderFromSmartFolder, r/sr=standard8